2010-08-21 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-dbus.h
	* src/api/na-ifactory-provider-provider.h
	* src/core/na-importer-ask.h
	* src/io-desktop/nadp-formats.h
	* src/io-desktop/nadp-reader.h
	* src/io-desktop/nadp-utils.h
	* src/io-desktop/nadp-writer.h
	* src/io-gconf/nagp-reader.h
	* src/io-gconf/nagp-writer.h
	* src/io-xml/naxml-formats.h
	* src/io-xml/naxml-reader.h
	* src/io-xml/naxml-writer.h
	* src/nact/nact-tree-model-priv.h: Fix single inclusion.

	* src/core/na-icontext.c
	(is_candidate_for_schemes, is_candidate_for_folders):
	Address each ocurrence of file instead of just the first one.

	* doc/nact/Makefile.am: Fix PDF distribution.

2010-08-19 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nautilus-actions-config-tool.ui:
	Do not overexpand the example label.

	* src/core/na-object-profile.c (convert_pre_v3_parameters_str):
	Fix conversion of '%d/%f' to '%f' when there are other parameters.

	* src/core/na-icontext.c
	(is_candidate_for_mimetypes): Improve debug messages.
	(is_candidate_for_basenames): Take care of matchcase.

	* src/core/na-icontext.c
	(is_mimetype_of): Take care of wildcard expressions.
	(is_candidate_for_folders): Only try to g_pattern_match() if has pattern.

	* src/plugin-menu/nautilus-actions.c
	(build_nautilus_menus): Add debug messages.

	* data/actions/open-terminal-here.desktop:
	* data/actions/show-na-parameters.desktop: Fix typo.

	* src/api/na-object-item.h:
	* src/core/na-object-item.c
	(na_object_item_deals_with_version): New function.

	* src/api/na-object-profile.h:
	* src/core/na-object-profile.c
	(na_object_profile_convert_v2_to_last): New function.

	* src/core/na-object-action.c:
	* src/core/na-object-menu.c
	(ifactory_object_read_start): Removed (unused) function.

	* src/io-xml/naxml-reader.c (naxml_reader_read_done): Cleanup code.

	* src/nact/nact-ibasenames-tab.c (on_tab_updatable_selection_changed):
	Display matchcase status for the current context.
