@@ -1,3 +1,9 @@
+2010-08-22 Pierre Wieser <pwieser@trychlos.org>
+
+	* src/core/na-icontext.c (is_candidate_for_mimetypes):
+	* src/core/na-selected-info.c (na_selected_info_get_mime_type):
+	Take care of possibly NULL mimetype.
+
 2010-08-21 Pierre Wieser <pwieser@trychlos.org>
 
 	* src/api/na-dbus.h
